crates/allthecodes/src/ui/command_palette/snapshots/allthecodes__ui__command_palette__tests__command_palette_after_page_down_100x12.snap
---
source: crates/allthecodes/src/ui/command_palette/tests.rs
assertion_line: 287
expression: "render_palette_snapshot(\"/\", &cwd, 100, 12, &[KeyCode::PageDown])"
---
"┌ Commands ────────────────────────────────────────────────────────────────────────────────────────┐"
"│Commands                          Command details                                                 │"
"│  ─ Builtin ─                                                                                     │"
"│/daemon                           View/control daemon process                                     │"
"│/debug                            Export or inspect debug information                             │"
"│/diff                             Show git diff of current changes                                │"
"│                                                                                                  │"
"│Behavior                                                                                          │"
"│  Enter runs: /diff                                                                               │"
"│  ghost: /diff                                                                                    │"
"│  usage: /diff                                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
