crates/allthecodes/src/ui/command_palette/snapshots/allthecodes__ui__command_palette__tests__command_palette_mcp_filtered_100x12.snap
---
source: crates/allthecodes/src/ui/command_palette/tests.rs
expression: "render_palette_snapshot(\"/mcp\", &cwd, 100, 12, &[])"
---
"┌ Commands ────────────────────────────────────────────────────────────────────────────────────────┐"
"│Commands                          Command details                                                 │"
"│/mcp                              MCP server management (list, status, add, e...                  │"
"│/ide                              Detect, select, or reconnect the IDE MCP br...                  │"
"│                                                                                                  │"
"│Behavior                                                                                          │"
"│  Enter runs: /mcp                                                                                │"
"│  ghost: p                                                                                        │"
"│  usage: /mcp <list|status|add|edit|remove|approve|reject|connect|disconnect|reconnect>           │"
"│  example: /mcp add ctx7 --command=npx --arg=-y --arg=@upstash/context7-mcp                       │"
"│  edit: user: ~/.allthecodes/settings.json | project: ./.allthecodes/settings.json             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
