crates/allthecodes/src/ui/command_palette/snapshots/allthecodes__ui__command_palette__tests__command_palette_plugin_filtered_100x12.snap
---
source: crates/allthecodes/src/ui/command_palette/tests.rs
expression: "render_palette_snapshot(\"/plugin\", &cwd, 100, 12, &[])"
---
"┌ Commands ────────────────────────────────────────────────────────────────────────────────────────┐"
"│Commands                          Command details                                                 │"
"│/plugin(plugins)                  Plugin management (list, status, enable, di...                  │"
"│/reload-plugins                   Hot-refresh the plugin registry                                 │"
"│                                                                                                  │"
"│Behavior                                                                                          │"
"│  Enter inserts: /plugin                                                                          │"
"│  ghost: n                                                                                        │"
"│  usage: /plugin <list|installed|disabled|errors|status|enable|disable|uninstall> [id]            │"
"│  example: /plugin enable <plugin-id>                                                             │"
"│  edit: installed: ~/.allthecodes/plugins/installed_plugins.json                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
