crates/allthecodes/src/ui/command_palette/snapshots/allthecodes__ui__command_palette__tests__command_palette_root_100x12.snap
---
source: crates/allthecodes/src/ui/command_palette/tests.rs
assertion_line: 283
expression: "render_palette_snapshot(\"/\", &cwd, 100, 12, &[])"
---
"┌ Commands ────────────────────────────────────────────────────────────────────────────────────────┐"
"│Commands                          Command details                                                 │"
"│  ─ Builtin ─                                                                                     │"
"│/init                             Initialize project config and AGENTS.md                         │"
"│/add-dir                          Add a new working directory                                     │"
"│/agents                           Browse agent definitions with source + over...                  │"
"│                                                                                                  │"
"│Behavior                                                                                          │"
"│  Enter runs: /init                                                                               │"
"│  ghost: /init                                                                                    │"
"│  usage: /init                                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
